--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@ ul{list-style:none;padding-left:0;}
 .status-passed{color:limegreen;font-weight:bold;}
 .status-failed{color:red;font-weight:bold;}
 footer{text-align:center;padding:15px;font-size:0.9em;opacity:0.8;margin-top:20px;}
+p.link{cursor:pointer;text-decoration:underline;margin-top:10px;text-align:center;}
 @media(max-width:768px){.sidebar{position:relative;width:100%;} .main{margin-left:0;}}
 </style>
 </head>
@@ -32,14 +33,26 @@ footer{text-align:center;padding:15px;font-size:0.9em;opacity:0.8;margin-top:20p
 
 <img src="https://sdmntprnorthcentralus.oaiusercontent.com/files/00000000-7c9c-622f-ae4e-fd7da774c7d3/raw?se=2025-08-30T05%3A14%3A55Z&sp=r&sv=2024-08-04&sr=b&scid=55e111af-e330-5bff-b3f6-22bb066912e1&skoid=add8ee7d-5fc7-451e-b06e-a82b2276cf62&sktid=a48cca56-e6da-484e-a814-9c849652bcb3&skt=2025-08-29T19%3A52%3A52Z&ske=2025-08-30T19%3A52%3A52Z&sks=b&skv=2024-08-04&sig=x9S9pY9JHsODKlcYnlkjmfJnSgDpBqWTd7z6JTQQBu4%3D" alt="911 Dispatch Logo">
 
-<div id="requestDiv" class="card">
+<!-- LOGIN -->
+<div id="loginDiv" class="card">
+<h2>Login</h2>
+<input type="text" id="loginUser" placeholder="Username">
+<input type="password" id="loginPass" placeholder="Password">
+<button onclick="login(document.getElementById('loginUser').value, document.getElementById('loginPass').value)">Login</button>
+<p class="link" onclick="showRequest()">Request Account</p>
+</div>
+
+<!-- REQUEST ACCOUNT -->
+<div id="requestDiv" class="card" style="display:none;">
 <h2>Request Account</h2>
 <input type="text" id="reqUser" placeholder="Username">
 <input type="password" id="reqPass" placeholder="Password">
 <button onclick="requestAccount()">Request Account</button>
+<p class="link" onclick="showLogin()">Back to Login</p>
 <div id="reqStatus"></div>
 </div>
 
+<!-- SIDEBAR -->
 <div class="sidebar" id="sidebar" style="display:none;">
 <h3 id="userRole"></h3>
 <button onclick="showPanel('dashboard')">Dashboard</button>
@@ -50,6 +63,7 @@ footer{text-align:center;padding:15px;font-size:0.9em;opacity:0.8;margin-top:20p
 <button onclick="logout()">Logout</button>
 </div>
 
+<!-- MAIN CONTENT -->
 <div class="main">
 <!-- Dashboard -->
 <div id="dashboard" class="card" style="display:none;">
@@ -112,6 +126,10 @@ users.push({username:'shadowisfun', password:'aidenfav88!', rank:'Admin'});
 localStorage.setItem('users',JSON.stringify(users));
 }
 
+// ---------- Show/Hide Screens ----------
+function showRequest(){document.getElementById('loginDiv').style.display='none';document.getElementById('requestDiv').style.display='block';}
+function showLogin(){document.getElementById('requestDiv').style.display='none';document.getElementById('loginDiv').style.display='block';}
+
 // ---------- Account Request ----------
 function requestAccount(){
 const username=document.getElementById('reqUser').value.trim();
@@ -131,6 +149,7 @@ function login(username,password){
 const user=users.find(u=>u.username===username&&u.password===password);
 if(user){
 currentUser=user;
+document.getElementById('loginDiv').style.display='none';
 document.getElementById('requestDiv').style.display='none';
 document.getElementById('sidebar').style.display='block';
 document.getElementById('dashUser').innerText=currentUser.username;
@@ -150,73 +169,9 @@ document.getElementById(id).style.display='block';
 }
 
 // ---------- Logout ----------
-function logout(){currentUser=null;document.getElementById('sidebar').style.display='none';document.getElementById('requestDiv').style.display='block';}
+function logout(){currentUser=null;document.getElementById('sidebar').style.display='none';document.getElementById('loginDiv').style.display='block';}
 
 // ---------- Scenarios ----------
-function addScenario(){
-const text=document.getElementById('scenarioText').value.trim();
-if(!text){ alert('Enter scenario'); return; }
-scenarios.push(text); localStorage.setItem('scenarios',JSON.stringify(scenarios));
-updateScenarioList();
-}
+function addScenario(){const text=document.getElementById('scenarioText').value.trim();if(!text){ alert('Enter scenario'); return;} scenarios.push(text); localStorage.setItem('scenarios',JSON.stringify(scenarios)); updateScenarioList();}
 function deleteScenario(){ if(scenarios.length>0){ scenarios.pop(); localStorage.setItem('scenarios',JSON.stringify(scenarios)); updateScenarioList(); } }
-function updateScenarioList(){ const ul=document.getElementById('scenarioList'); ul.innerHTML=''; scenarios.forEach(s=>{ const li=document.createElement('li'); li.textContent=s; ul.appendChild(li);}); }
-
-// ---------- Live Calls ----------
-function updateLiveCalls(){
-const ul=document.getElementById('liveCallList'); ul.innerHTML='';
-liveCalls.forEach((c,i)=>{
-if(c.assigned) return;
-const li=document.createElement('li');
-li.textContent=`${c.desc} (${c.loc}) `;
-const fireBtn=document.createElement('button'); fireBtn.textContent='Fire'; fireBtn.onclick=()=>dispatchCall(i,'Fire',li);
-const emsBtn=document.createElement('button'); emsBtn.textContent='EMS'; emsBtn.onclick=()=>dispatchCall(i,'EMS',li);
-const policeBtn=document.createElement('button'); policeBtn.textContent='Police'; policeBtn.onclick=()=>dispatchCall(i,'Police',li);
-li.appendChild(fireBtn); li.appendChild(emsBtn); li.appendChild(policeBtn);
-ul.appendChild(li);
-});
-}
-function dispatchCall(index,service,li){
-liveCalls[index].assigned=true; liveCalls[index].service=service; liveCalls[index].user=currentUser.username; liveCalls[index].score=50; liveCalls[index].eligible=true;
-results.push({...liveCalls[index],passfail:'Waiting',feedback:'',review:''});
-localStorage.setItem('liveCalls',JSON.stringify(liveCalls));
-localStorage.setItem('results',JSON.stringify(results));
-li.remove();
-}
-
-// ---------- Results ----------
-function updateResults(){
-const tbody=document.getElementById('resultsTable').querySelector('tbody'); tbody.innerHTML='';
-results.forEach(r=>{
-const tr=document.createElement('tr');
-let statusClass='status-waiting';
-if(r.passfail==='Passed') statusClass='status-passed';
-else if(r.passfail==='Failed') statusClass='status-failed';
-tr.innerHTML=`<td>${r.user}</td><td>${r.desc||''}</td><td>${r.score}</td><td>${r.eligible?'Yes':'No'}</td><td>${r.service}</td><td class="${statusClass}">${r.passfail}</td><td>${r.feedback}</td><td>${r.review}</td>`;
-tbody.appendChild(tr);
-});
-}
-function exportResults(){
-let csv='User,Scenario,Score,Eligible,Service,Pass/Fail,Feedback,Review\n';
-results.forEach(r=>{csv+=`${r.user},${r.desc||''},${r.score},${r.eligible?'Yes':'No'},${r.service},${r.passfail},${r.feedback},${r.review}\n`;});
-const a=document.createElement('a'); a.href='data:text/csv;charset=utf-8,'+encodeURIComponent(csv); a.download='results.csv'; a.click();
-}
-
-// ---------- Pending Accounts ----------
-function updatePending(){
-const ul=document.getElementById('pendingList'); ul.innerHTML='';
-pendingAccounts.forEach((p,i)=>{
-const li=document.createElement('li'); li.textContent=`${p.username} (${p.status}) `;
-const approve=document.createElement('button'); approve.textContent='Approve'; approve.onclick=()=>{
-users.push({username:p.username,password:p.password,rank:'Dispatcher Trainee'}); localStorage.setItem('users',JSON.stringify(users));
-pendingAccounts.splice(i,1); localStorage.setItem('pendingAccounts',JSON.stringify(pendingAccounts)); updatePending(); alert(`Approved ${p.username}`);};
-const deny=document.createElement('button'); deny.textContent='Deny'; deny.onclick=()=>{
-pendingAccounts.splice(i,1); localStorage.setItem('pendingAccounts',JSON.stringify(pendingAccounts)); updatePending(); alert(`Denied ${p.username}`);};
-li.appendChild(approve); li.appendChild(deny); ul.appendChild(li);
-});
-document.getElementById('pendingBtn').style.display=(currentUser.rank==='Admin' || currentUser.rank==='Dispatcher High Command')?'block':'none';
-}
-</script>
-</body>
-</html>
-
+function updateScenarioList(){ const ul=document.getElementById('scenarioList
